--- a/modules/manifest.html
+++ b/modules/manifest.html
@@ -38,9 +38,9 @@
 
 <h2>Modules</h2>
 <ul class="nowrap">
-  <li><strong>export</strong></li>
+  <li><a href="../modules/export.html">export</a></li>
   <li><a href="../modules/functions.html">functions</a></li>
-  <li><a href="../modules/manifest.html">manifest</a></li>
+  <li><strong>manifest</strong></li>
   <li><a href="../modules/mapblock.html">mapblock</a></li>
   <li><a href="../modules/serialize.html">serialize</a></li>
 </ul>
@@ -53,8 +53,8 @@
 
 <div id="content">
 
-<h1>Module <code>export</code></h1>
-<p>export functions</p>
+<h1>Module <code>manifest</code></h1>
+<p>manifest read/write functions</p>
 <p>
 
 </p>
@@ -63,8 +63,12 @@
 <h2><a href="#Functions">Functions</a></h2>
 <table class="function_list">
 	<tr>
-	<td class="name" nowrap><a href="#modgen.export">modgen.export (name, pos1, pos2, fast, verbose, callback)</a></td>
-	<td class="summary">exports the specified region to the mapgen-mod</td>
+	<td class="name" nowrap><a href="#modgen.write_manifest">modgen.write_manifest (filename)</a></td>
+	<td class="summary">Writes the manifest to a file in json format</td>
+	</tr>
+	<tr>
+	<td class="name" nowrap><a href="#modgen.read_manifest">modgen.read_manifest (filename)</a></td>
+	<td class="summary">Reads a minfest from a json file</td>
 	</tr>
 </table>
 
@@ -76,32 +80,37 @@
 
     <dl class="function">
     <dt>
-    <a name = "modgen.export"></a>
-    <strong>modgen.export (name, pos1, pos2, fast, verbose, callback)</strong>
+    <a name = "modgen.write_manifest"></a>
+    <strong>modgen.write_manifest (filename)</strong>
     </dt>
     <dd>
-    exports the specified region to the mapgen-mod
+    Writes the manifest to a file in json format
 
 
     <h3>Parameters:</h3>
     <ul>
-        <li><span class="parameter">name</span>
-         the playername to report infos to
+        <li><span class="parameter">filename</span>
+         the filename to write to
         </li>
-        <li><span class="parameter">pos1</span>
-         the first position of the export region
-        </li>
-        <li><span class="parameter">pos2</span>
-         the second position of the export region
-        </li>
-        <li><span class="parameter">fast</span>
-         if true: export a mapblock every server-step
-        </li>
-        <li><span class="parameter">verbose</span>
-         if true: report detailed stats while exporting
-        </li>
-        <li><span class="parameter">callback</span>
-        [opt] optional callback function on completion
+    </ul>
+
+
+
+
+
+</dd>
+    <dt>
+    <a name = "modgen.read_manifest"></a>
+    <strong>modgen.read_manifest (filename)</strong>
+    </dt>
+    <dd>
+    Reads a minfest from a json file
+
+
+    <h3>Parameters:</h3>
+    <ul>
+        <li><span class="parameter">filename</span>
+         the filename of the manifest
         </li>
     </ul>
 
