--- a/modules/import_mod.html
+++ b/modules/import_mod.html
@@ -30,20 +30,16 @@
   <li><a href="../index.html">Index</a></li>
 </ul>
 
-<h2>Contents</h2>
-<ul>
-<li><a href="#Functions">Functions</a></li>
-</ul>
 
 
 <h2>Modules</h2>
 <ul class="nowrap">
   <li><a href="../modules/export.html">export</a></li>
   <li><a href="../modules/functions.html">functions</a></li>
-  <li><a href="../modules/import_mod.html">import_mod</a></li>
+  <li><strong>import_mod</strong></li>
   <li><a href="../modules/manifest.html">manifest</a></li>
   <li><a href="../modules/mapblock.html">mapblock</a></li>
-  <li><strong>serialize</strong></li>
+  <li><a href="../modules/serialize.html">serialize</a></li>
 </ul>
 <h2>Topics</h2>
 <ul class="">
@@ -54,54 +50,20 @@
 
 <div id="content">
 
-<h1>Module <code>serialize</code></h1>
-<p>serialization functions</p>
+<h1>Module <code>import_mod</code></h1>
+<p>Modgen import mod
+ writes the mapblocks back to the world
+ dependency- and global-free</p>
 <p>
 
 </p>
 
 
-<h2><a href="#Functions">Functions</a></h2>
-<table class="function_list">
-	<tr>
-	<td class="name" nowrap><a href="#modgen.serialize_part">modgen.serialize_part (pos)</a></td>
-	<td class="summary">Serializes the mapblock at the given position</td>
-	</tr>
-</table>
 
 <br/>
 <br/>
 
 
-    <h2 class="section-header "><a name="Functions"></a>Functions</h2>
-
-    <dl class="function">
-    <dt>
-    <a name = "modgen.serialize_part"></a>
-    <strong>modgen.serialize_part (pos)</strong>
-    </dt>
-    <dd>
-    Serializes the mapblock at the given position
-
-
-    <h3>Parameters:</h3>
-    <ul>
-        <li><span class="parameter">pos</span>
-         the node-position
-        </li>
-    </ul>
-
-    <h3>Returns:</h3>
-    <ol>
-
-        the serialized mapblock as table
-    </ol>
-
-
-
-
-</dd>
-</dl>
 
 
 </div> <!-- id="content" -->
