deploy: f33adc1dd828513871f7dffdb76a39079633c02c

--- a/modules/autosave.html
+++ b/modules/autosave.html
@@ -34,10 +34,10 @@
 
 <h2>Modules</h2>
 <ul class="nowrap">
-  <li><a href="../modules/autosave.html">autosave</a></li>
+  <li><strong>autosave</strong></li>
   <li><a href="../modules/export.html">export</a></li>
   <li><a href="../modules/functions.html">functions</a></li>
-  <li><strong>import_mod</strong></li>
+  <li><a href="../modules/import_mod.html">import_mod</a></li>
   <li><a href="../modules/manifest.html">manifest</a></li>
   <li><a href="../modules/mapblock.html">mapblock</a></li>
   <li><a href="../modules/serialize.html">serialize</a></li>
@@ -51,10 +51,9 @@
 
 <div id="content">
 
-<h1>Module <code>import_mod</code></h1>
-<p>Modgen import mod
- writes the mapblocks back to the world
- dependency- and global-free</p>
+<h1>Module <code>autosave</code></h1>
+<p>marks a region as changed, to be used by dependent mods whose changes don't get caught
+ by the usual change-detection</p>
 <p>
 
 </p>
